MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.22', folder: 'D:\keil_5\ARM\ARMCLANG\Bin'
Rebuild target 'handaotest'
../Core/Src/main.c(100): error: function definition is not allowed here
  100 | {
      | ^
1 error generated.
compiling main.c...
compiling tim.c...
compiling stm32f4xx_it.c...
compiling gpio.c...
compiling stm32f4xx_hal_msp.c...
assembling startup_stm32f407xx.s...
compiling stm32f4xx_hal_flash_ramfunc.c...
compiling stm32f4xx_hal_rcc.c...
compiling stm32f4xx_hal_flash_ex.c...
compiling stm32f4xx_hal_rcc_ex.c...
compiling stm32f4xx_hal_flash.c...
compiling stm32f4xx_hal_tim_ex.c...
compiling stm32f4xx_hal_gpio.c...
compiling stm32f4xx_hal_dma_ex.c...
compiling stm32f4xx_hal_tim.c...
compiling stm32f4xx_hal_pwr_ex.c...
compiling stm32f4xx_hal_pwr.c...
compiling stm32f4xx_hal_dma.c...
compiling stm32f4xx_hal_cortex.c...
compiling stm32f4xx_hal.c...
compiling system_stm32f4xx.c...
compiling stm32f4xx_hal_exti.c...
"handaotest\handaotest.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
